# multimode-model

./: .flake8  .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  README.md  grid_iteration_performance.ipynb  requirements.txt  setup.cfg  setup.py  shallow_water_eqs.py
.devcontainer/: Dockerfile  devcontainer.json
benchmark/: domain_split_API.py  numba_parallel_performance.ipynb  test_benchmark_lin_comb.py  test_benchmark_sum_arrs.py  test_benchmark_sum_states.py  test_benchmark_term_functions.py
doc/: .gitignore  api.rst  conf.py  contributing.rst  examples.rst  index.rst  model_formulation.rst  whats_new.rst
doc/examples/: 1_gravity_wave.ipynb  2_subtropical_gyre.ipynb  3_domain_decomposition_dask.ipynb  4_online_diagnostics.ipynb
doc/getting_started/: index.rst  installation.rst
examples/: 1_gravity_wave.ipynb  2_subtropical_gyre.ipynb  3_domain_decomposition.ipynb
examples/Dunkel/: Dunkel.ipynb  Dunkel.py  nonlinear_linear_run.py
examples/McCreary/: Iteration_test.ipynb  McCreary.ipynb
multimodemodel/: API_implementation.py  __init__.py  border.py  config.py  coriolis.py  datastructure.py  domain_split_API.py  grid.py  integrate.py  integrator.py  jit.py  kernel.py  shallow_water_eqs.py  util.py  workflow.py
multimodemodel/api/: __init__.py  border.py  core.py  integration.py  split.py  typing.py  workflow.py
multimodemodel/diag/: __init__.py  diag.py
multimodemodel/tests/: test_api.py  test_dataclasses.py  test_distributed.py  test_grid.py  test_integration_functions.py  test_term_functions.py  test_util.py  test_workflows.py
multimodemodel/tests/validation_tests/: no_dashboard.ipynb  reduced_transport.ipynb  test_gravity_wave_distributed.ipynb
multimodemodel/typing/: __init__.py
test/: test_dataclasses.py  test_integration_functions.py  test_term_functions.py
tests/: test_dataclasses.py  test_integration_functions.py  test_term_functions.py
