[metadata]
name = multimodemodel
author = Martin Claus
author_email = mclaus@geomar.de
; license = MIT
description = Nonlinear Multimode model
long_description_content_type=text/x-rst
long_description =
    Implementation of a non-linear ocean model which expresses the state as a projection
    onto vertical normal modes. Hence, the vertical coordinate is quasi-continuous but the
    vertical resolution is limited by the truncation in vertical mode space.

url = https://git.geomar.de/mcgroup/multimode-model
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering

[options]
packages = find:
python_requires = >=3.9
install_requires =
    numba >= 0.50.1
    numpy
    setuptools

[options.extras_require]
xarray =
    xarray

test =
    pytest
    pytest-benchmark
    pytest-cov

lint =
    %(test)s
    flake8
    black
    mypy == 0.931

examples =
    %(xarray)s
    ipython
    matplotlib
    distributed
    bokeh>=2.1.1

complete =
    %(xarray)s
    %(test)s
    %(lint)s
    %(examples)s

docs =
    %(complete)s
    sphinx == 4.4
    ipython
    ipykernel
    jupyter-client
    nbsphinx
    sphinx-book-theme >= 0.0.38
    # scanpydoc
    # sphinx_rtd_theme
    # sphinx-copybutton
    # sphinx-panels
    # sphinxext-rediraffe
    # sphinxext-opengraph

[tool:pytest]
python_files = test_*.py
testpaths =
    multimodemodel/tests
addopts = --cov=multimodemodel --cov-report term-missing --cov-report=xml:cov.xml --junitxml=report.xml
; markers =
;     flaky: flaky tests
;     network: tests requiring a network connection
;     slow: slow tests

[flake8]
ignore =
    E501  # line too long - let black worry about that
    W503  # line break before binary operator
    D203  # 1 blank line required before class docstring
exclude =
    .git
    __pycache__
    doc/*
max-complexity = 10
max-line-length = 88
per-file-ignores =
    __init__.py:F401


[mypy]
exclude = benchmark|asv_bench|doc
files = .
show_error_codes = True

[mypy-numba.*]
ignore_missing_imports = True

[mypy-setuptools.*]
ignore_missing_imports = True
